--- a/pages/phrase/styles.module.css
+++ b/pages/phrase/styles.module.css
@@ -1,8 +1,13 @@
 .container {
-  padding: 10rem;
-  display: "flex";
+  padding: 5rem;
 }
 
 .container > * {
   margin: 1rem;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 1rem;
+  }
 }
