--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  padding: 1rem 1rem;
+  justify-content: space-between;
+  padding: 1rem;
   box-shadow: rgba(0, 0, 0, 0.16) 0 4px 2px -2px;
   margin-bottom: 2rem;
 }
