--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -14,6 +14,10 @@
   margin-bottom: 2rem;
 }
 
+.red {
+  background-color: red;
+}
+
 .start {
   flex-basis: 200px;
   display: flex;
@@ -80,7 +84,6 @@
 
 @media (max-width: 480px) {
   .nav {
-    display: block;
     padding: 0.5rem;
     text-align: center;
   }
