--- a/pages/search.module.css
+++ b/pages/search.module.css
@@ -1,6 +1,8 @@
 .container {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+}
+
+.container > * {
+  margin: 1rem 0;
 }
