--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -4,7 +4,7 @@
   height: 100vh;
 }
 
-.nav {
+.navMobile {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -14,12 +14,29 @@
   min-height: 50px;
 }
 
+.nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: rgba(0, 0, 0, 0.16) 0 4px 2px -2px;
+  margin-bottom: 2rem;
+  min-height: 75px;
+}
+
 .start {
   flex-basis: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
+  padding: 0 1rem;
+}
+
+@media (max-width: 600px) {
+  .start h4 {
+    font-size: 1.5rem;
+  }
 }
 
 .center {
