--- a/components/Searchbar.module.css
+++ b/components/Searchbar.module.css
@@ -42,6 +42,7 @@
   top: 50px;
   left: 0;
   right: 0;
+  z-index: 999;
 }
 
 .suggestions {
@@ -49,6 +50,7 @@
   position: absolute;
   width: 100%;
   border-radius: 0px 0px 25px 25px;
+  z-index: 999;
 }
 
 .list {
