--- a/pages/new.module.css
+++ b/pages/new.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding-top: 10%;
+  justify-content: center;
   align-items: center;
 }
 
@@ -21,6 +21,17 @@
 
 .preview_card > * {
   margin: 1rem 0;
+}
+
+.preview_card .keywords_grid {
+  padding-top: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.preview_card .keywords_grid span {
+  padding: 0.5rem;
+  margin: 0.5rem;
 }
 
 .form {
