--- a/components/Phrase/CardAdd.module.css
+++ b/components/Phrase/CardAdd.module.css
@@ -1,4 +1,10 @@
 .card {
   width: 100%;
   padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.card_outlined {
+  border: solid 1px;
 }
