--- a/pages/new.module.css
+++ b/pages/new.module.css
@@ -17,11 +17,17 @@
 
 .preview_card {
   padding: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
   margin-bottom: 5rem;
 }
 
 .preview_card > * {
   margin: 1rem 0;
+}
+
+.author {
+  margin-left: 1rem;
 }
 
 .preview_card .keywords_grid {
