--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -1,9 +1,8 @@
 .wrapper {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  height: 100vh;
 }
-
 .nav_mobile {
   display: flex;
   flex-direction: row;
@@ -16,6 +15,7 @@
 }
 
 .nav {
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
