--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,45 +1,44 @@
 .main {
   display: grid;
-  margin-left: 20%;
-  margin-right: 20%;
+  justify-content: center;
+  grid-template-columns: 1fr;
 }
 
-.main > * {
-  margin: 1rem;
+.main:first-child {
+  position: relative;
+  top: -75px;
 }
 
-.main h3 {
+.main h2 {
   text-align: center;
+  font-weight: 400;
+  margin-block: 0;
+  margin-inline: 0;
+  font-size: 3em;
 }
 
 .main .action_text {
   margin-left: 20%;
   position: relative;
-  left: -0.675rem;
+  left: -1em;
   background-color: white;
   display: flex;
   align-items: center;
-}
-.main .action_text > * {
-  display: inline-block;
-  margin: 0;
+  font-size: 1.5em;
 }
 
-.river {
-  position: relative;
+.action_text svg {
+  font-size: 75%;
+  margin: 1em;
 }
 
 .line {
   border: maroon solid 1px;
   position: absolute;
-  top: -50px;
+  top: -90vh;
   left: 20%;
-  height: 20vh;
+  height: 100vh;
   z-index: -1;
-}
-
-.section {
-  position: relative;
 }
 
 .card {
@@ -51,8 +50,23 @@
   height: 100px;
 }
 
-@media only screen and (max-device-width: 480px) {
+@media screen and (max-device-width: 480px) {
+  .main h2 {
+    font-size: 2em;
+  }
+  .main p {
+    font-size: 1em;
+  }
+}
+
+@media screen and (min-device-width: 768px) {
   .main {
-    margin: 0;
+    grid-template-columns: 80%;
+  }
+}
+
+@media screen and (min-device-width: 1024px) {
+  .main {
+    grid-template-columns: 60%;
   }
 }
