--- a/components/new/TitleForm.module.css
+++ b/components/new/TitleForm.module.css
@@ -1,3 +1,10 @@
+.wrapper h1 {
+  text-align: center;
+  font-weight: 400;
+  margin-inline: 0;
+  font-size: 2em;
+}
+
 .textfield {
   width: 90%;
 }
@@ -5,4 +12,5 @@
 .textfieldInput {
   font-size: 1rem;
   text-align: center;
+  font-family: "Noto Serif", serif;
 }
