changes to the sign in page, searchbar edits, refactoring

--- a/pages/auth/signin.module.css
+++ b/pages/auth/signin.module.css
@@ -8,8 +8,16 @@
 
 .paper {
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.wrapper a {
+  text-decoration: none;
 }
 
 .logo {
-  font-family: "Indie Flower";
+  font-family: "Bree Serif";
+  color: maroon;
 }
