--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -39,6 +39,12 @@
   text-align: center;
 }
 
+@media (max-width: 600px) {
+  .start h4 {
+    font-size: 1.5rem;
+  }
+}
+
 .start_mobile {
   display: flex;
   align-items: center;
@@ -55,16 +61,16 @@
   flex-grow: 1;
 }
 
-@media (max-width: 600px) {
-  .start h4 {
-    font-size: 1.5rem;
-  }
-}
-
 .end {
   flex-basis: 200px;
   display: flex;
   justify-content: flex-end;
+  padding: 0 1rem;
+}
+
+.end .button {
+  white-space: nowrap;
+  background-color: maroon;
 }
 
 .sessionBar {
