--- a/components/Searchbar.module.css
+++ b/components/Searchbar.module.css
@@ -5,6 +5,12 @@
   padding: 0 0.5rem;
 }
 
+.container {
+  height: 80%;
+  width: 100%;
+  position: relative;
+}
+
 .paper_mobile {
   display: flex;
   align-items: center;
@@ -19,25 +25,21 @@
   flex: 1;
 }
 
-.container {
-  width: 100%;
-  position: relative;
-}
-
 .searchMobile {
   display: flex;
   align-items: center;
   width: 100%;
 }
 
-.search {
+.paper {
   padding: 2px 4px 2px 16px;
   display: flex;
   align-items: center;
   width: 100%;
+  height: 100%;
 }
 
-.search:hover {
+.paper:hover {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
