--- a/pages/search.module.css
+++ b/pages/search.module.css
@@ -5,6 +5,10 @@
   font-family: "Noto Serif", serif;
 }
 
+.header {
+  padding: 1em;
+}
+
 @media screen and (min-device-width: 768px) {
   .container {
     grid-template-columns: 80%;
