--- a/components/Layouts/IntersectionObserverWrapper.module.css
+++ b/components/Layouts/IntersectionObserverWrapper.module.css
@@ -16,9 +16,21 @@
   height: 100%;
 }
 
+.li {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 1em;
+  cursor: pointer;
+}
+
+.li:hover {
+  color: maroon;
+}
+
 .overflowStyle {
   order: 99;
-  position: "sticky";
-  right: "0";
-  background-color: "white";
+  position: sticky;
+  right: 0;
+  background-color: white;
 }
